--- a/themes/hugotex/layouts/partials/footer.html
+++ b/themes/hugotex/layouts/partials/footer.html
@@ -11,10 +11,10 @@
         <br>
         {{ end }}
         {{ if .Site.Title }}
-        design oparty na <a href="https://github.com/kaisugi/HugoTeX">HugoTeX</a>, edycje: <a href="https://www.linkedin.com/in/ptrwrbl/">Piotr Wróbel</a> <br>
+        design: <a href="https://github.com/kaisugi/HugoTeX">HugoTeX</a>, kudos: <a href="https://www.linkedin.com/in/ptrwrbl/">Piotr Wróbel</a> <br>
         {{ end }}
         2025
-        <a href="{{ .Site.BaseURL }}en/">(english)</a>
+        <a href="{{ .Site.BaseURL }}en/">EN</a> / <a href="{{ .Site.BaseURL }}">PL </a>
       </p>
   </div>
 </footer>
